--- a/28-02-2024/Study2.css
+++ b/28-02-2024/Study2.css
@@ -28,7 +28,14 @@ input {
 }
 table {
     width: 100%;
+    margin-top: 20px;
 }
 th, td {
     text-align: center;
+}
+.text1 {
+    width: 50%;
+}
+.text2, .text3 {
+width: 95%;
 }
