--- a/11.03.2024/FB.css
+++ b/11.03.2024/FB.css
@@ -1,59 +1,20 @@
-/* Laptop/Desktop */
-@media screen and (min-width:769px){
-    .col-md-1 {width: 8.33%;}
-    .col-md-2 {width: 16.66%;}
-    .col-md-3 {width: 25%;}
-    .col-md-4 {width: 33.33%;}
-    .col-md-5 {width: 41.66%;}
-    .col-md-6 {width: 50%;}
-    .col-md-7 {width: 58.33%;}
-    .col-md-8 {width: 66.66%;}
-    .col-md-9 {width: 75%;}
-    .col-md-10 {width: 83.33%;}
-    .col-md-11 {width: 91.66%;}
-    .col-md-12 {width: 100%;}
-}
-
-/* Ipad */
-@media screen and (min-width:577px) and ( max-width:768px){
-    .col-sm-1 {width: 8.33%;}
-    .col-sm-2 {width: 16.66%;}
-    .col-sm-3 {width: 25%;}
-    .col-sm-4 {width: 33.33%;}
-    .col-sm-5 {width: 41.66%;}
-    .col-sm-6 {width: 50%;}
-    .col-sm-7 {width: 58.33%;}
-    .col-sm-8 {width: 66.66%;}
-    .col-sm-9 {width: 75%;}
-    .col-sm-10 {width: 83.33%;}
-    .col-sm-11 {width: 91.66%;}
-    .col-sm-12 {width: 100%;}
-}
-
-/* Phone */
-@media screen and (max-width:576px){
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 .logo { 
     float: left;
     height: 40px;
+    position: relative;
 }
 .toolbar { 
     float: left;
+    margin-left: 250px;
 }
 .personal-infomation{ 
     float: left;
+    margin-left: 200px;
 }
 .imglogo {
     height: 40px;
@@ -65,4 +26,8 @@
 .left {
     background-color: beige;
     clear: both;
+}
+.search {
+    position: absolute;
+    top:30px
 }
