--- a/18-03-2024/case-study1.html/CSS-case-study1.css
+++ b/18-03-2024/case-study1.html/CSS-case-study1.css
@@ -44,3 +44,34 @@
     flex-basis: 50%;
     margin: auto;
 }
+.features-img {
+    flex-basis: 50%;
+    margin: auto;
+}
+.features-img img{
+    width: 70%;
+    border-radius: 10px;
+}
+.features h1 {
+    text-align: left;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: #009688;
+}
+.features-desc {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.feature-icon .bi{
+width: 50px;
+height: 50px;
+font-size: 30px;
+line-height: 50px;
+border-radius: 8px;
+color: #009688;
+}
+.feature-text p{
+    text-align: initial;
+    padding: 0 20px;
+}
