--- a/20.03.2024/style.css
+++ b/20.03.2024/style.css
@@ -7,3 +7,7 @@ border: 1px solid black;
     box-shadow: brown inset;
     border: 1px solid blue;
 }
+.author-info {
+    height: 500px;
+    width: 300px;
+}
