--- a/Template/index.html
+++ b/Template/index.html
@@ -11,7 +11,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
         <script src="https://kit.fontawesome.com/50c32869b8.js" crossorigin="anonymous"></script>
-        <link href="css/main.css" rel="stylesheet">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header class="header">
@@ -19,20 +19,20 @@
                 <div class="header__top row">
                     <div class="col-md-7 header__top-logo">
                         <a class="header__logo" href="#">
-                            <img src="images/logo.png" alt="Open Charity">
+                            <img src="images/logo.png"alt="Open Charity">
                         </a>
                     </div>
                     <div class="col-md-5 header__top-nav">
                         <nav class="header__nav">
-                            <ul class="d-flex ">
+                            <ul class="d-flex text-center">
                                 <li class="nav">
-                                    <a href="#" class="nav__link">About Open Charity</a>
+                                    <a href="#" class="nav__link">ABOUT OPEN CHARITY</a>
                                 </li>
                                 <li class="nav">
-                                    <a href="#" class="nav__link">The Blog</a>
+                                    <a href="#" class="nav__link">THE BLOG</a>
                                 </li>
                                 <li class="nav">
-                                    <a href="#" class="nav__link  nav__link--btn">Join us</a>
+                                    <a href="#" class="nav__link  nav__link--btn">JOIN US</a>
                                 </li>
                             </ul>
                         </nav>
@@ -41,11 +41,11 @@
             </div>
             <div class="header__banner text-center">
                 <h1 class="header__title">Sharing Ideas For Charities</h1>
-                <h3 class="header__subtitle">Many charities’ goals are similar, as is the functionality we require, but little shared working takes place.</h3>
+                <h5 class="header__subtitle">Many charities’ goals are similar, as is the functionality we require, but little shared working takes place.</h5  >
                 <p class="header__paragraph">By working together, driving shared areas of interest and influencing open source developments we can bring efficiencies, improve the digital experience for our users, and have great impact.</p>
-                <h4 class="header__subtitle header__subtitle--spacing">
+                <h5 class="header__subtitle header__subtitle--spacing">
                     Together we can make a bigger diference.
-                </h4>
+                </h5>
             </div>
         </header>
         <div class="full-container container">
@@ -63,7 +63,7 @@
          <img src="images/rashedul.jpg" style="display:none" class="collaborate__logo collaborate__logo--spacing" alt="Rashedul">
         <div class="collaborate clearfix container">
             <h2 class="block-title text-center">Get Involved</h2>
-            <div class="row collaborate__around" >
+            <div class="row collaborate__around text-center" >
                 <div class="collaborate__block col-md-4">
                     <img src="images/logoicon1.png" class="collaborate__logo collaborate__logo--spacing" alt="Meetup">
                     <h3 class="collaborate__subtitle">We do meetings</h3> 
@@ -92,28 +92,28 @@
             <div class="mission clearfix text-center row">
                 <div class="mission__text text-center">
                     <h2 class="block-title">Our Mission</h2>
-                    <h4 class="mission__subtitle">Charities and Partners collaborating and sharing open solutions and ideas to create value in the digital space.</h4>
-                    <h3 class="mission__invitation">If you are a charity or a supplier, we are ready to welcome you.</h3>
+                    <p class="mission__subtitle">Charities and Partners collaborating and sharing open solutions and ideas to create value in the digital space.</p>
+                    <h5 class="mission__invitation">If you are a charity or a supplier, we are ready to welcome you.</h5>
                 </div>
-                <div class="container">
+                <div class="container mission">
                     <div class="row">
                         <div class="mission__goal col-md-4">
                             <div class="mission__icon">
-                                <i class="fa fa-lightbulb-o"></i>
+                                <i class="fa fa-lightbulb-o mission__icon-backgroud"></i>
                             </div>
                             <h3 class="mission__title">We help charities</h3>
                             <p class="mission__details">share knowledge and working practice to make the best technology choices.</p>
                         </div>
                         <div class="mission__goal col-md-4">
                             <div class="mission__icon">
-                                <i class="fa fa-users"></i>
+                                <i class="fa fa-users mission__icon-backgroud"></i>
                             </div>
                             <h3 class="mission__title">We bring together</h3>
                             <p class="mission__details">charities and suppliers to the charity sector to share best practices.</p>
                         </div>
                         <div class="mission__goal col-md-4">
                             <div class="mission__icon">
-                                <i class="fa fa-thumbs-up"></i>
+                                <i class="fa fa-thumbs-up mission__icon-backgroud"></i>
                             </div>
                             <h3 class="mission__title">We encourage</h3>
                             <p class="mission__details">collaboration and innovation for the good of the charity sector.</p>
