--- a/Case-study_end/style.css
+++ b/Case-study_end/style.css
@@ -3,18 +3,94 @@
     padding: 0;
     margin: 0;
 }
+a {
+    text-decoration: none;
+}
 /* header */
-.header__nav {
-    height: 20%;
-    position: fixed;
+/* logo */
+.header__row {
+    margin: 20px;
 }
 
-.header__nav-button {}
+.header__logo-1{
+    display: inline-block;
+    padding: 0 5px;
+}
+.header-img {
+    width: 50px;
+}
+.header__logo-2 {
+    display: inline-block;
+    padding: 0 5px;
+}
+.header__logo-3{
+    display: inline-block; 
+    padding: 0 5px; 
+}
+/* search */
+.header__search {
+    height: 30%;
+}
+.header__button {
+    border: 2px solid ;
+    border-radius: 50px;
+    height: 45px;
+}
+.header__input {
+    display: inline-block;
+    margin: 6px;
+}
+.header__input-1 {
+    border: 0;
+    min-width: 300px;
+}
+.header__icon {
+    display: inline-block;
+}
+
+/* list */
+.header__list-1 {
+    display: inline-block;
+    padding: 0 6px;
+}
 
 /* main */
-
-/* content */
-main {
-    background-image: url(img/learn-english.jfif);
-    
+/* content-img */
+.content__img {
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+/* section1 */
+.page__content {
+    border: 2px solid rgb(186, 80, 80);
+    border-radius: 5px;
+}
+h5 {
+    margin: 15px 0;
+}
+.section1__story {
+    display: flex;
+}
+.section1__img {
+    width: 90px;
+}
+.section1__author { 
+    float: left;
+}
+.section1__author p{
+    padding: 3px 5px;
+}
+.section1__category {
+    float: left;
+}
+.section1__content {
+    margin: 8px 5px;
+}
+.category {
+    border: 1px solid chocolate;
+    color: chocolate;
+    padding: 2px 4px;
+}
+.section1__inf {
 }
